--- a/package.json
+++ b/package.json
@@ -54,7 +54,8 @@
     "@loopback/repository": "^1.1.8",
     "@loopback/rest": "^1.8.0",
     "@loopback/rest-explorer": "^1.1.11",
-    "@loopback/service-proxy": "^1.0.10"
+    "@loopback/service-proxy": "^1.0.10",
+    "loopback-connector-mongodb": "^4.0.0"
   },
   "devDependencies": {
     "@loopback/build": "^1.3.2",
