--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
     "@loopback/rest": "^1.8.0",
     "@loopback/rest-explorer": "^1.1.11",
     "@loopback/service-proxy": "^1.0.10",
-    "loopback-connector-mongodb": "^4.0.0"
+    "loopback-connector-mongodb": "^4.0.0",
+    "loopback-connector-rest": "^3.4.1"
   },
   "devDependencies": {
     "@loopback/build": "^1.3.2",
